package com.magicworld.tfg_angular_springboot.attraction;

public enum Intensity {
    LOW,
    MEDIUM,
    HIGH
}
