package com.parqueaventuras.magicworld.tfg_angular_springboot.user;

public enum Role {
    ADMIN,USER
}
